--- a/react/source/views/parts/partials/head.pug
+++ b/react/source/views/parts/partials/head.pug
@@ -6,6 +6,7 @@ head
 		title= page.title
 	else
 		title React Example
+	base(href="/demos/react")
 	link(href="css/materialize.css" rel="stylesheet")
 	link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
 	style.
