fix pathing in a better way

--- a/react/source/views/index.pug
+++ b/react/source/views/index.pug
@@ -36,5 +36,5 @@ block content
 		.col.s4.text-center
 			p
 				br
-				a.btn-large.waves-effect.waves-light.light-blue(href="/01-what-is-react.html" style="display:block") Let's Get Started &raquo;
+				a.btn-large.waves-effect.waves-light.light-blue(href="01-what-is-react.html" style="display:block") Let's Get Started &raquo;
 		.col.s4
