--- a/react/source/views/parts/partials/head.pug
+++ b/react/source/views/parts/partials/head.pug
@@ -1,3 +1,4 @@
+- var baseURL = '/demos/react'
 include siteData
 include mixins
 doctype html
@@ -6,7 +7,7 @@ head
 		title= page.title
 	else
 		title React Example
-	base(href="/demos/react")
+	//- base(href="/demos/react")
 	link(href="css/materialize.css" rel="stylesheet")
 	link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
 	style.
