--- a/react/source/views/parts/partials/siteData.pug
+++ b/react/source/views/parts/partials/siteData.pug
@@ -2,17 +2,17 @@
 	var sitepages = [
 	{
 		title: 'Home',
-		url: '/'
+		url: baseURL
 	},
 	{
 		title: '01 What Is React?',
-		url: '/01-what-is-react.html'
+		url: '01-what-is-react.html'
 	},
 	{
 		title: '02 React Use Cases',
-		url: '/02-react-use-cases.html'
+		url: '02-react-use-cases.html'
 	},
 	{
 		title:'03 Project Setup',
-		url: '/03-project-setup.html'
+		url: '03-project-setup.html'
 	}]
