--- a/react/source/views/parts/partials/innerPageNav.pug
+++ b/react/source/views/parts/partials/innerPageNav.pug
@@ -1,3 +1,3 @@
 nav.orange.accent-4
-	p.left.no-margin: a.block(href="/") Home
+	p.left.no-margin: a.block(href=baseURL) Home
 	h3.text-center.no-margin= page.title
